# FuelPriceStationMCP

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fuel_price_mcp/: __init__.py  __main__.py  client.py  config.py  demo.py  exceptions.py  factory.py  filters.py  logging.py  models.py  server.py
tests/: conftest.py  test_client.py  test_demo.py  test_filters.py  test_logging.py  test_models.py  test_server.py
tests/fixtures/: api_responses.py
